--- a/views/admin/pages/product/create.pug
+++ b/views/admin/pages/product/create.pug
@@ -31,7 +31,8 @@ block main
         div(class = "form-group")
             label(for="textContent") Noi Dung
             textarea(
-                class = "form-control"
+
+                class = "form-control textarea-mce"
                 id = "textContent"
                 name = "textContent"
                 row = "5"   
