--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -17,17 +17,17 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
   nav.navegacion
     ul
       li
-        a#inbox(href='#')
+        a#inbox(href='/admin/dashboard')
           ion-icon(name='mail-unread-outline')
-          span Inbox
+          span Tổng quan
       li
-        a(href='#')
+        a(href='/admin/products')
           ion-icon(name='star-outline')
-          span Starred
+          span Danh sách phim
       li
         a(href='#')
           ion-icon(name='paper-plane-outline')
-          span Sent
+          span Danh mục phim
       li
         a(href='#')
           ion-icon(name='document-text-outline')
