--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -1,4 +1,4 @@
-
+doctype html
 html 
     head 
         title #{pageTitle}
@@ -17,4 +17,7 @@ html
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js") 
     script(src = "/admin/js/script.js")
+    //- TinyMCE
+    script(src = "/tinymce/tinymce.min.js")
+    script(src = "/admin/js/my-tinymce-config.js")
 
