--- a/views/admin/pages/product/deleted.pug
+++ b/views/admin/pages/product/deleted.pug
@@ -4,7 +4,7 @@ include ../../mixins/sort.pug
 
 block main 
     +success("5000")
-    h1 Danh Sách Phim 
+    h1 Danh Sách Phim Đã Xóa
 
     div(class = "container-control")
         each item in filterStatus
@@ -28,7 +28,7 @@ block main
           ) 
             i(class = "fa-solid fa-magnifying-glass")
       .cart-mt-3 
-        .card-header Sap xep 
+        .card-header Sắp Xếp 
         .card-body 
             .row 
                 .col-4 
@@ -58,16 +58,11 @@ block main
             type = "submit"
             class = "btn btn-primary"
           ) Áp Dụng
-      a(
-            href="/admin/products/create"
+        a(
+            href="/admin/products"
             class = "btn btn-outline-success mb-3"
 
-          ) + Thêm Phim Mới
-      a(
-            href="/admin/products/deleted"
-            class = "btn btn-outline-success mb-3"
-
-          ) Đã xóa
+        ) Danh Sach Phim
 
       table(
         class = "table-movie"
@@ -115,10 +110,11 @@ block main
                       td  #{item.nameOther}
                       td  #{item.infoMore}
                       td 
-                          a(
-                            href = `/admin/products/edit/${item.id}`
-                          )
-                            b Sửa
+                          button(
+                            button-stored
+                            data-id = item.id
+                          ) Khôi Phục 
+                             
                           button(
                             data-id = item.id
                             button-delete
@@ -148,7 +144,8 @@ block main
     form(
       action = ""
       method = "POST"
-      id = "form-delete-item"
-      data-path = "/admin/products/delete"
+      id = "form-stored-item"
+      data-path = "/admin/products/stored"
     )
+    script(src="/admin/js/product.js") 
 
