--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -25,7 +25,7 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
           ion-icon(name='star-outline')
           span Danh sách phim
       li
-        a(href='#')
+        a(href='/admin/products-category')
           ion-icon(name='paper-plane-outline')
           span Danh mục phim
       li
