--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -29,9 +29,9 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
           ion-icon(name='paper-plane-outline')
           span Danh mục phim
       li
-        a(href='#')
+        a(href='/admin/roles')
           ion-icon(name='document-text-outline')
-          span Drafts
+          span Nhom quyen
       li
         a(href='#')
           ion-icon(name='bookmark-outline')
