--- a/views/admin/pages/product/create.pug
+++ b/views/admin/pages/product/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main 
     +alert-error(5000)
@@ -20,6 +21,16 @@ block main
                 id = "name"
                 name = "name"
             )   
+        div(class = "form-group")
+            label(for="movie_category_id") Danh Muc
+            select(
+                name = "movie_category_id"
+                id = "movie_category_id"
+                class = "form-control"
+            )
+                option(value = "") -----Chon danh muc-----
+                if(category)
+                    +select-tree(category)
         div(class = "form-group")
             label(for="nameOther") Tên khác
             input(
