--- a/views/admin/pages/product/index.pug
+++ b/views/admin/pages/product/index.pug
@@ -28,7 +28,7 @@ block main
           ) 
             i(class = "fa-solid fa-magnifying-glass")
       .cart-mt-3 
-        .card-header Sap xep 
+        .card-header Sắp xếp
         .card-body 
             .row 
                 .col-4 
