--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -31,11 +31,11 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
       li
         a(href='/admin/roles')
           ion-icon(name='document-text-outline')
-          span Nhom quyen
+          span Nhóm quyền
       li
-        a(href='#')
+        a(href='/admin/roles/permissions')
           ion-icon(name='bookmark-outline')
-          span Important
+          span Phân quyền
       li
         a(href='#')
           ion-icon(name='alert-circle-outline')
