--- a/views/admin/pages/roles/edit.pug
+++ b/views/admin/pages/roles/edit.pug
@@ -6,7 +6,7 @@ include ../../mixins/alert.pug
 block main 
     +alert-error(5000)
     +success(5000)
-    h1(class = "mb-4") Cap Nhat Nhom Quyen
+    h1(class = "mb-4") Cập nhật nhóm quyền
 
     form(
         action= `/admin/roles/edit/${data.id}?_method=PATCH`
@@ -14,7 +14,7 @@ block main
     ) 
 
         div(class = "form-group")
-            label(for="name") Tieu De 
+            label(for="name") Tên 
             input(
                 type="text"
                 class = "form-control"
@@ -23,7 +23,7 @@ block main
                 value = data.name
             ) 
         div(class = "form-group")
-            label(for="desc") Mo Ta 
+            label(for="desc") Mô tả
             input(
                 type="text"
                 class = "form-control"
@@ -35,4 +35,4 @@ block main
             button(
                 type = "submit"
                 class = "btn btn-primary"
-            ) Cap nhat
+            ) Cập nhật
