--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -37,9 +37,9 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
           ion-icon(name='bookmark-outline')
           span Phân quyền
       li
-        a(href='#')
+        a(href='/admin/accounts')
           ion-icon(name='alert-circle-outline')
-          span Spam
+          span Danh sách tài khoản
       li
         a(href='#')
           ion-icon(name='trash-outline')
