--- a/views/admin/paritials/header.pug
+++ b/views/admin/paritials/header.pug
@@ -60,6 +60,12 @@ link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome
           span.nombre Jhampier
           span.email jhampier@gmail.com
         ion-icon(name='ellipsis-vertical-outline')
+    div(class = "logout text-center mt-3") 
+      a(
+        href="/admin/auth/logout"
+        class = "btn btn-danger btn-sm"
+
+      ) Đăng xuất
 
 script(type='module' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js')
 script(nomodule='' src='https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js')
